<resources>
    <string name="app_name">parkingapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_codigo">Codigo</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="BotonRegistrar">Registrar</string>
    <string name="BotonBuscar">Buscar</string>
    <string name="BotonModificar">Modificar</string>
    <string name="BotonEliminar">Eliminar</string>
    <string name="BotonCancelar">Cancelar</string>
    <string name="txt_cedula">Cedula</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_ruc">RUC</string>
    <string name="txt_telefono">Telefono</string>
    <string name="txt_salario">Salario</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_clave">Contraseña</string>
    <string name="txt_costo">Costo</string>
    <string name="txt_precio">Precio</string>
    <string name="rb1">IVA 5%</string>
    <string name="rb2">IVA 10%</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
