<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.utic.parkingapp.Marcas2Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="33dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="MARCAS"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/txt_codigo"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/txt_descripcion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="196dp"
        android:text="Registrar"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="196dp"
        android:onClick="Modificar"
        android:text="Modificar"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btnRegistrar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="Eliminar"
        android:text="Eliminar"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnModificar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="89dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:onClick="CancelarBoton"
        android:text="Cancelar"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listaMarcas"
        android:layout_width="335dp"
        android:layout_height="297dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#75BEB5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/BotonBuscar"
        app:layout_constraintBottom_toTopOf="@+id/txt_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancelar" />

</android.support.constraint.ConstraintLayout>